--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -180,7 +180,7 @@ Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see sections 2.2, 4.1).
 
 Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
-Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Vertical CO~2~ concentration gradients can influence gas exchange indicated by the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions [Table 1]. Particularly, understory seedlings above ground can have highest rates of CO~2~ refixation [Brooks et al. 1997]. Elevated CO~2~ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions [Table 1]. Particularly, understory seedlings above ground benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [Brooks et al. 1997]. However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
@@ -348,12 +348,10 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 
 Leaf hydraulic, stomatal conductance, and $g_b$ are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
-Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, when water supply cannot meet the demands incurred by the high irradiance, VPD and $g_b$ experienced by sun leaves typically at noon, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
-In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
-The temperature at which $g_s$ is maximal, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021a]. 
-
-Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_{leaf}$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, higher irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Therefore, although typically $g_s$ increases with light, due to hydraulic constraints, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency [@kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
+Maximum $g_s$ increases with light--– typically tracking photosynthetic capacity (Wong et al. 1979)-– and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
+However, water supply cannot meet the demands incurred by the high irradiance, VPD and $g_b$ experienced by sun leaves with fully open stomata because of height-related constraints on water transport [ **e.g, Yoder et al. 1994, Koch et al. 2004, Sillet et al. 2010**] and/or because of ncreased evaporative demand ($VPD_{leaf}$) caused by leaf warming in sunlit canopy locations. These constraints tend to educe leaf water potential making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
+Stomatal depression duces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
+The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven y increased VPD) than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
 
 ### 4.2. Photosynthesis
 
