--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -66,7 +66,7 @@ Elsa M. Ordway^2,5^,
 Marielle N. Smith^6^,
 Tyeen Taylor^7^,
 Lawren Sack^2^,
-Tom Buckly^8^,
+Thomas N. Buckley^8^,
 Kristina J. Anderson-Teixeira^1,3^* 
 
 
