--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -12725,6 +12725,21 @@
   file = {/Users/nidhivinod/Zotero/storage/5Y2BGYCY/2020JG005892.html}
 }
 
+@article{yoderEvidenceReducedPhotosynthetic1994,
+  title = {Evidence of {{Reduced Photosynthetic Rates}} in {{Old Trees}}},
+  author = {Yoder, B. J. and Ryan, M. G. and Waring, R. H. and Schoettle, A. W. and Kaufmann, M. R.},
+  date = {1994-08-01},
+  journaltitle = {Forest Science},
+  volume = {40},
+  number = {3},
+  pages = {513--527},
+  issn = {0015-749X},
+  doi = {10.1093/forestscience/40.3.513},
+  url = {https://doi.org/10.1093/forestscience/40.3.513},
+  urldate = {2022-01-18},
+  abstract = {Wood production generally declines as forests age. The decrease in production has been attributed to higher respiration associated with increasing biomass, but direct measurements fail to support this assumption. An alternate hypothesis is that the growth decline is caused by reduced net photosynthesis. To test this hypothesis, we compared the net photosynthetic rates of foliage from trees that had ceased height growth with foliage from actively growing, mature trees. Results showed that net photosynthesis per unit area of 1-yr-old foliage from old Pinus contorta and P. ponderosa averaged 14-30\% lower than the same-aged foliage from younger trees. Computer simulations from a previous study indicated that differences of this magnitude are sufficient to explain the lower wood production in old trees. The cause of the photosynthetic decline is not clear, but it did not appear to be due to a reduction in the maximum capacity for photosynthesis. Ratios of stable carbon isotopes from leaves and wood indicated a greater stomatal limitation of photosynthesis in older trees. A possible relationship between lower hydraulic conductance in the vascular systems of older trees leading to greater stomatal closure is discussed. For. Sci. 40(3):513-527.}
+}
+
 @article{yuanIncreasedAtmosphericVapor2019,
   title = {Increased Atmospheric Vapor Pressure Deficit Reduces Global Vegetation Growth},
   author = {Yuan, Wenping and Zheng, Yi and Piao, Shilong and Ciais, Philippe and Lombardozzi, Danica and Wang, Yingping and Ryu, Youngryel and Chen, Guixing and Dong, Wenjie and Hu, Zhongming and Jain, Atul K. and Jiang, Chongya and Kato, Etsushi and Li, Shihua and Lienert, Sebastian and Liu, Shuguang and Nabel, Julia E. M. S. and Qin, Zhangcai and Quine, Timothy and Sitch, Stephen and Smith, William K. and Wang, Fan and Wu, Chaoyang and Xiao, Zhiqiang and Yang, Song},
